--- a/FastScriptReload.Editor.csproj
+++ b/FastScriptReload.Editor.csproj
@@ -12,11 +12,11 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{ce42bcba-d7e0-8326-d962-7f14e6c849ad}</ProjectGuid>
+    <ProjectGuid>{7990bb11-d5d4-a613-b2be-441afcd8b9e1}</ProjectGuid>
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <AssemblyName>Assembly-CSharp-Editor</AssemblyName>
+    <AssemblyName>FastScriptReload.Editor</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <BaseDirectory>.</BaseDirectory>
@@ -25,7 +25,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>Temp\Bin\Debug\Assembly-CSharp-Editor\</OutputPath>
+    <OutputPath>Temp\Bin\Debug\FastScriptReload.Editor\</OutputPath>
     <DefineConstants>UNITY_2022_3_14;UNITY_2022_3;UNITY_2022;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_5_OR_NEWER;UNITY_5_6_OR_NEWER;UNITY_2017_1_OR_NEWER;UNITY_2017_2_OR_NEWER;UNITY_2017_3_OR_NEWER;UNITY_2017_4_OR_NEWER;UNITY_2018_1_OR_NEWER;UNITY_2018_2_OR_NEWER;UNITY_2018_3_OR_NEWER;UNITY_2018_4_OR_NEWER;UNITY_2019_1_OR_NEWER;UNITY_2019_2_OR_NEWER;UNITY_2019_3_OR_NEWER;UNITY_2019_4_OR_NEWER;UNITY_2020_1_OR_NEWER;UNITY_2020_2_OR_NEWER;UNITY_2020_3_OR_NEWER;UNITY_2021_1_OR_NEWER;UNITY_2021_2_OR_NEWER;UNITY_2021_3_OR_NEWER;UNITY_2022_1_OR_NEWER;UNITY_2022_2_OR_NEWER;UNITY_2022_3_OR_NEWER;PLATFORM_ARCH_64;UNITY_64;UNITY_INCLUDE_TESTS;ENABLE_AR;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_EVENT_QUEUE;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_TEXTURE_STREAMING;ENABLE_VIRTUALTEXTURING;ENABLE_LZMA;ENABLE_UNITYEVENTS;ENABLE_VR;ENABLE_WEBCAM;ENABLE_UNITYWEBREQUEST;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_SERVICES_USE_WEBREQUEST;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_EDITOR_GAME_SERVICES;ENABLE_UNITY_GAME_SERVICES_ANALYTICS_SUPPORT;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_HUB_LICENSE;ENABLE_WEBSOCKET_CLIENT;ENABLE_GENERATE_NATIVE_PLUGINS_FOR_ASSEMBLIES_API;ENABLE_DIRECTOR_AUDIO;ENABLE_DIRECTOR_TEXTURE;ENABLE_MANAGED_JOBS;ENABLE_MANAGED_TRANSFORM_JOBS;ENABLE_MANAGED_ANIMATION_JOBS;ENABLE_MANAGED_AUDIO_JOBS;ENABLE_MANAGED_UNITYTLS;INCLUDE_DYNAMIC_GI;ENABLE_SCRIPTING_GC_WBARRIERS;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;ENABLE_VIDEO;ENABLE_ACCELERATOR_CLIENT_DEBUGGING;ENABLE_NAVIGATION_PACKAGE_DEBUG_VISUALIZATION;ENABLE_NAVIGATION_HEIGHTMESH_RUNTIME_SUPPORT;ENABLE_NAVIGATION_UI_REQUIRES_PACKAGE;PLATFORM_STANDALONE;TEXTCORE_1_0_OR_NEWER;PLATFORM_STANDALONE_WIN;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_NVIDIA;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_OUT_OF_PROCESS_CRASH_HANDLER;ENABLE_CLUSTER_SYNC;ENABLE_CLUSTERINPUT;PLATFORM_UPDATES_TIME_OUTSIDE_OF_PLAYER_LOOP;GFXDEVICE_WAITFOREVENT_MESSAGEPUMP;PLATFORM_INITIALIZES_MEMORY_MANAGER_EXPLICITLY;ENABLE_MONO;NET_4_6;NET_UNITY_4_8;ENABLE_PROFILER;DEBUG;TRACE;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;ENABLE_UNITY_COLLECTIONS_CHECKS;ENABLE_BURST_AOT;UNITY_TEAM_LICENSE;ENABLE_CUSTOM_RENDER_TEXTURE;ENABLE_DIRECTOR;ENABLE_LOCALIZATION;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_TILEMAP;ENABLE_TIMELINE;ENABLE_INPUT_SYSTEM;TEXTCORE_FONT_ENGINE_1_5_OR_NEWER;LiveScriptReload_Enabled;LiveScriptReload_IncludeInBuild_Enabled;CSHARP_7_OR_LATER;CSHARP_7_3_OR_NEWER;UNITY_EDITOR_ONLY_COMPILATION</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -45,7 +45,26 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\2022.3.14f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Settings\TutorialInfo\Scripts\Editor\ReadmeEditor.cs" />
+    <Compile Include="Assets\Plugins\LiveScriptReload\Plugins\FastScriptReload\Scripts\Editor\Compilation\CodeRewriting\ThisAssignmentRewriter.cs" />
+    <Compile Include="Assets\Plugins\LiveScriptReload\Plugins\FastScriptReload\Scripts\Editor\Compilation\CodeRewriting\ThisRewriterBase.cs" />
+    <Compile Include="Assets\Plugins\LiveScriptReload\Plugins\FastScriptReload\Scripts\Editor\Compilation\CodeRewriting\HotReloadCompliantRewriter.cs" />
+    <Compile Include="Assets\Plugins\LiveScriptReload\Plugins\FastScriptReload\Scripts\Editor\Compilation\CodeRewriting\ConstructorRewriter.cs" />
+    <Compile Include="Assets\Plugins\LiveScriptReload\Plugins\FastScriptReload\Scripts\Editor\NewFields\NewFieldsRendererDefaultEditorPatch.cs" />
+    <Compile Include="Assets\Plugins\LiveScriptReload\Plugins\FastScriptReload\Scripts\Editor\Compilation\CodeRewriting\RoslynUtils.cs" />
+    <Compile Include="Assets\Plugins\LiveScriptReload\Plugins\FastScriptReload\Scripts\Editor\Compilation\CodeRewriting\NewFieldDeclaration.cs" />
+    <Compile Include="Assets\Plugins\LiveScriptReload\Plugins\FastScriptReload\Scripts\Editor\Compilation\CodeRewriting\CreateNewFieldInitMethodRewriter.cs" />
+    <Compile Include="Assets\Plugins\LiveScriptReload\Plugins\FastScriptReload\Scripts\Editor\Compilation\CodeRewriting\ThisCallRewriter.cs" />
+    <Compile Include="Assets\Plugins\LiveScriptReload\Plugins\FastScriptReload\Scripts\Editor\FastScriptReloadWelcomeScreen.cs" />
+    <Compile Include="Assets\Plugins\LiveScriptReload\Plugins\FastScriptReload\Scripts\Editor\Compilation\DynamicCompilationBase.cs" />
+    <Compile Include="Assets\Plugins\LiveScriptReload\Plugins\FastScriptReload\Scripts\Editor\Compilation\DynamicAssemblyCompiler.cs" />
+    <Compile Include="Assets\Plugins\LiveScriptReload\Plugins\FastScriptReload\Scripts\Editor\FastScriptReloadManager.cs" />
+    <Compile Include="Assets\Plugins\LiveScriptReload\Plugins\FastScriptReload\Scripts\Editor\FileWatcherSetupEntry.cs" />
+    <Compile Include="Assets\Plugins\LiveScriptReload\Plugins\FastScriptReload\Scripts\Editor\Compilation\CodeRewriting\FieldsWalker.cs" />
+    <Compile Include="Assets\Plugins\LiveScriptReload\Plugins\FastScriptReload\Scripts\Editor\Compilation\PatchMcsArgsGeneration.cs" />
+    <Compile Include="Assets\Plugins\LiveScriptReload\Plugins\FastScriptReload\Scripts\Editor\Compilation\McsExeDynamicCompilation.cs" />
+    <Compile Include="Assets\Plugins\LiveScriptReload\Plugins\FastScriptReload\Scripts\Editor\Compilation\CodeRewriting\NewFieldsRewriter.cs" />
+    <Compile Include="Assets\Plugins\LiveScriptReload\Plugins\FastScriptReload\Scripts\Editor\Compilation\DotnetExeCompilator.cs" />
+    <None Include="Assets\Plugins\LiveScriptReload\Plugins\FastScriptReload\Scripts\Editor\FastScriptReload.Editor.asmdef" />
     <Reference Include="UnityEngine">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.14f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
@@ -733,198 +752,23 @@
     <Reference Include="System.Xml.XPath.XDocument">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.14f1\Editor\Data\UnityReferenceAssemblies\unity-4.8-api\Facades\System.Xml.XPath.XDocument.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEditor.UI">
+      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\UnityEditor.UI.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.UI">
+      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\UnityEngine.UI.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEditor.TestRunner">
       <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\UnityEditor.TestRunner.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.TestRunner">
       <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\UnityEngine.TestRunner.dll</HintPath>
     </Reference>
-    <Reference Include="Unity.RenderPipelines.Core.Runtime">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.RenderPipelines.Core.Runtime.dll</HintPath>
-    </Reference>
-    <Reference Include="com.unity.cinemachine.editor">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\com.unity.cinemachine.editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Burst.Editor">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.Burst.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.ProBuilder.AddOns.Editor">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.ProBuilder.AddOns.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Rider.Editor">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.Rider.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.RenderPipelines.Universal.Config.Runtime">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.RenderPipelines.Universal.Config.Runtime.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.RenderPipelines.Core.Editor">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.RenderPipelines.Core.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.VisualScripting.Flow">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.VisualScripting.Flow.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.2D.Sprite.Editor">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.2D.Sprite.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Mathematics.Editor">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.Mathematics.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.RenderPipelines.Core.ShaderLibrary">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.RenderPipelines.Core.ShaderLibrary.dll</HintPath>
-    </Reference>
-    <Reference Include="PPv2URPConverters">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\PPv2URPConverters.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.TextMeshPro">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.TextMeshPro.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.ProBuilder.AssetIdRemapUtility">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.ProBuilder.AssetIdRemapUtility.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.VSCode.Editor">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.VSCode.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.RenderPipelines.Universal.Editor">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.RenderPipelines.Universal.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.RenderPipelines.Universal.Runtime">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.RenderPipelines.Universal.Runtime.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.PlasticSCM.Editor">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.PlasticSCM.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Burst">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.Burst.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.ProBuilder">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.ProBuilder.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Timeline.Editor">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.Timeline.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.VisualScripting.Shared.Editor">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.VisualScripting.Shared.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.ShaderGraph.Editor">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.ShaderGraph.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.VisualStudio.Editor">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.VisualStudio.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEditor.UI">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\UnityEditor.UI.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.VisualScripting.Core">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.VisualScripting.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.UI">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\UnityEngine.UI.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.VisualScripting.Core.Editor">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.VisualScripting.Core.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.VisualScripting.Flow.Editor">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.VisualScripting.Flow.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.RenderPipeline.Universal.ShaderLibrary">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.RenderPipeline.Universal.ShaderLibrary.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Timeline">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.Timeline.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.InputSystem">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.InputSystem.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.ProBuilder.Editor">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.ProBuilder.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.InputSystem.ForUI">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.InputSystem.ForUI.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.VisualScripting.SettingsProvider.Editor">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.VisualScripting.SettingsProvider.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.VisualScripting.State.Editor">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.VisualScripting.State.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Mathematics">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.Mathematics.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.RenderPipelines.Universal.Shaders">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.RenderPipelines.Universal.Shaders.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.TextMeshPro.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.Searcher.Editor">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.Searcher.Editor.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.VisualScripting.State">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Unity.VisualScripting.State.dll</HintPath>
-    </Reference>
-    <Reference Include="Cinemachine">
-      <HintPath>C:\Users\kacpe\PiIwS_gra\Library\ScriptAssemblies\Cinemachine.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="Assembly-CSharp-firstpass.csproj">
-      <Project>{a1dccd46-1385-84d1-8757-2723f0d3a22c}</Project>
-      <Name>Assembly-CSharp-firstpass</Name>
-    </ProjectReference>
-    <ProjectReference Include="Assembly-CSharp.csproj">
-      <Project>{68880cd5-ef4e-2f31-28e8-6b4107724134}</Project>
-      <Name>Assembly-CSharp</Name>
-    </ProjectReference>
-    <ProjectReference Include="Assembly-CSharp-Editor-firstpass.csproj">
-      <Project>{b070df8b-64fc-3231-5b2a-9b30136f47bc}</Project>
-      <Name>Assembly-CSharp-Editor-firstpass</Name>
-    </ProjectReference>
-    <ProjectReference Include="VTabs.csproj">
-      <Project>{a5131e28-1fe4-d6ab-63c3-05c9ce5031ab}</Project>
-      <Name>VTabs</Name>
-    </ProjectReference>
     <ProjectReference Include="FastScriptReload.Runtime.csproj">
       <Project>{77e20e7f-a3cd-0bf2-279a-ba3978014f50}</Project>
       <Name>FastScriptReload.Runtime</Name>
-    </ProjectReference>
-    <ProjectReference Include="VHierarchy.csproj">
-      <Project>{83579780-1e7b-4d90-f83b-6924bf916e14}</Project>
-      <Name>VHierarchy</Name>
-    </ProjectReference>
-    <ProjectReference Include="LiveScriptReload.Runtime.csproj">
-      <Project>{a5594c97-61ce-7ec1-482e-914b405932b2}</Project>
-      <Name>LiveScriptReload.Runtime</Name>
-    </ProjectReference>
-    <ProjectReference Include="FastScriptReload.Editor.csproj">
-      <Project>{7990bb11-d5d4-a613-b2be-441afcd8b9e1}</Project>
-      <Name>FastScriptReload.Editor</Name>
-    </ProjectReference>
-    <ProjectReference Include="VInspector.csproj">
-      <Project>{29ecd7c8-446a-ee70-bc2c-fd8ccad7926a}</Project>
-      <Name>VInspector</Name>
-    </ProjectReference>
-    <ProjectReference Include="LiteNetLib.csproj">
-      <Project>{e930815d-9c34-b3d5-707f-fd3a50f48ca5}</Project>
-      <Name>LiteNetLib</Name>
-    </ProjectReference>
-    <ProjectReference Include="VFavorites.csproj">
-      <Project>{f565ccdc-457b-6565-aa66-9e44a0bcd9c2}</Project>
-      <Name>VFavorites</Name>
-    </ProjectReference>
-    <ProjectReference Include="LiveScriptReload.Editor.csproj">
-      <Project>{d0c28488-80fa-f868-7b0d-02db0a5b902e}</Project>
-      <Name>LiveScriptReload.Editor</Name>
-    </ProjectReference>
-    <ProjectReference Include="VRuler.csproj">
-      <Project>{8cc902d3-a89f-9de7-d58e-62d5c4616c7c}</Project>
-      <Name>VRuler</Name>
-    </ProjectReference>
-    <ProjectReference Include="VFolders.csproj">
-      <Project>{ab4383e4-a131-2c0a-f3ff-51c0882ac96d}</Project>
-      <Name>VFolders</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
