Added working console system
also little change in gitignore file

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,10 +46,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\PuzzleSystem\PuzzleTileConnectionChecker.cs" />
+    <Compile Include="Assets\Scripts\MovementLock.cs" />
+    <Compile Include="Assets\Scripts\ConsoleSystemScripts\ConsoleVisibility.cs" />
     <Compile Include="Assets\Scripts\CameraSwitchScripts\ChangeCameraPriority.cs" />
     <Compile Include="Assets\Scripts\SingleInputController.cs" />
     <Compile Include="Assets\Scripts\PuzzleSystem\SetPipeActive.cs" />
     <Compile Include="Assets\Scripts\PuzzleSystem\PuzzleTileColliderTrigger.cs" />
+    <Compile Include="Assets\Scripts\ConsoleSystemScripts\ConsoleSorterScript.cs" />
+    <Compile Include="Assets\Scripts\CursorModeController.cs" />
     <Compile Include="Assets\Settings\TutorialInfo\Scripts\Readme.cs" />
     <Compile Include="Assets\Scripts\PuzzleSystem\PuzzleController.cs" />
     <Compile Include="Assets\Scripts\CameraSwitchScripts\SwitchingCameraController.cs" />
@@ -58,6 +62,8 @@
     <Compile Include="Assets\Scripts\PuzzleSystem\PuzzlePowerSource.cs" />
     <Compile Include="Assets\Scripts\PuzzleSystem\PuzzleTilePower.cs" />
     <Compile Include="Assets\Scripts\PuzzleSystem\RotateObject.cs" />
+    <Compile Include="Assets\Scripts\CameraSwitchScripts\ShowInWorldCanvas.cs" />
+    <Compile Include="Assets\Scripts\CameraSwitchScripts\ImageLookAtPlayerInCamera.cs" />
     <Reference Include="UnityEngine">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.14f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
