--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Assets\Scripts\PuzzleSystem\RotateObject.cs" />
     <Compile Include="Assets\Scripts\CameraSwitchScripts\ShowInWorldCanvas.cs" />
     <Compile Include="Assets\Scripts\CameraSwitchScripts\ImageLookAtPlayerInCamera.cs" />
+    <Compile Include="Assets\ManualCameraRenderer.cs" />
     <Reference Include="UnityEngine">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2022.3.14f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
